[package]
name = "belt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde_json = "1.0.85"
serde = "1.0.145"
ethers = { version = "0.17.0", features = ["abigen", "ws", "ipc", "rustls"] }
tokio = { version = "1.21.1", features = ["full"] }
serde_derive = "1.0.147"
pair_sync = "0.3.1"
thiserror = "1.0.36"
num-bigfloat = "1.6.0"