[package]
name = "coex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde_json = "1.0.85"
serde = "1.0.145"
ethers = { version = "1.0.2", features = ["abigen", "ws", "ipc", "rustls"] }
tokio = { version = "1.21.1", features = ["full"] }
serde_derive = "1.0.147"
thiserror = "1.0.36"
num-bigfloat = "1.6.0"
cfmms = "0.5.6"
uniswap_v3_math = "0.2.23"
sha3 = "0.10.6"
rand = "0.8.5"
async-trait = "0.1.59"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "fmt"]}
clap = "4.1.8"



[[bin]]
path = "bin/coex.rs"
name = "coex"
