[package]
name = "coex"
version = "0.1.0"
edition = "2021"
license = ""
description = "The Conveyor Offchain Executor"
readme = "README.md"
homepage = "https://github.com/ConveyorLabs/COEX"
repository = "https://github.com/ConveyorLabs/COEX"
keywords = ["evm", "mev", "blockchain"]

[dependencies]
cfmms = "0.6.1"
toml = "0.5.9"
serde_json = "1.0.85"
serde = "1.0.145"
ethers = { version = "2.0.0", features = ["abigen", "ws", "ipc", "rustls"] }
tokio = { version = "1.21.1", features = ["full"] }
serde_derive = "1.0.147"
thiserror = "1.0.36"
num-bigfloat = "1.6.0"
uniswap_v3_math = "0.2.26"
sha3 = "0.10.6"
rand = "0.8.5"
async-trait = "0.1.59"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "fmt"]}
clap = {version="4.1.8", features = ["derive"]}



[[bin]]
path = "bin/coex.rs"
name = "coex"
